@@ -1,6 +1,7 @@
 Fri Feb 08 2019
 1. Bug fixing
    * Warn the user if an expected column is not present in the data
+   * Correct documentation of smat to indicate that is should be a 2xN matrix instead of Nx2
 
 2. Changes
    * Display citation information directly instead of capturing the print output
